mejora del security config y correccion de los mensajes